syntax = "proto3";

option csharp_namespace = "VehicleService";

package vehicle;

service VehicleService {
  rpc Register (RegisterVehicleRequest) returns (RegisterVehicleResponse);
  rpc GetByPlate (GetVehicleRequest) returns (GetVehicleResponse);
  rpc Update (UpdateVehicleRequest) returns (UpdateVehicleResponse);
  rpc Delete (DeleteVehicleRequest) returns (DeleteVehicleResponse);
  rpc ListAll (Empty) returns (ListAllVehiclesResponse);
}

message RegisterVehicleRequest {
  string plateNumber = 1;
  string machineryType = 2;
  bool isOperational = 3;
  double fuelCapacity = 4;
  string registeredAt = 5;
  double fuelConsumptionByKm = 6;
  string model = 7;
}

message RegisterVehicleResponse {
  string status = 1;
}

message GetVehicleRequest {
  string plateNumber = 1;
}

message GetVehicleResponse {
  int32 id = 1;                       
  string plateNumber = 2;
  string machineryType = 3;
  bool isOperational = 4;
  double fuelCapacity = 5;
  string registeredAt = 6;
  double fuelConsumptionByKm = 7;
  string model = 8;
}


message UpdateVehicleRequest {
  int32 id = 1;                       
  string plateNumber = 2;
  string machineryType = 3;
  bool isOperational = 4;
  double fuelCapacity = 5;
  string registeredAt = 6;
  double fuelConsumptionByKm = 7;
  string model = 8;
}


message UpdateVehicleResponse {
  string status = 1;
}

message DeleteVehicleRequest {
  string plateNumber = 1;
}

message DeleteVehicleResponse {
  string status = 1;
}

message VehicleItem {
  int32 id = 1;                      
  string plateNumber = 2;
  string machineryType = 3;
  bool isOperational = 4;
  double fuelCapacity = 5;
  string registeredAt = 6;
  double fuelConsumptionByKm = 7;
  string model = 8;
}


message ListAllVehiclesResponse {
  repeated VehicleItem vehicles = 1;
}

message Empty {}
